# kata-string-calculator

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  string-calculator.cabal
include/: string_calculator.h
src/: StringCalculator.hs  string-calculator.ts  string_calculator.cpp
test/: StringCalculatorTest.hs  string-calculator-test.spec.ts  string_calculator_test.cpp
