cabal-version:      2.4
name:               StringCalculator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: StringCalculator

license:            Unlicense
author:             JDanielEscanez
maintainer:         jdanielescanez@gmail.com

library 
    exposed-modules:  
      StringCalculator
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test
    type:               exitcode-stdio-1.0
    main-is:            StringCalculatorTest.hs
    hs-source-dirs:     test, src
    other-modules:      StringCalculator
    build-depends:      base ^>=4.14.3.0,
                        base >=4.7 && <5,
                        hspec
    default-language:   Haskell2010